# Flask_Template

./: README.md  logger.conf  pyproject.toml
service/: __init__.py  routes.py
service/common/: error_handler.py  log_handlers.py
service/models/: __init__.py  persistent_base.py
