[tool.poetry]
name = "flask-template"
version = "1.0.0"
description = ""
authors = ["Weston Gorczyca <weston.gorczyca@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
waitress = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
